Rules now only visible on command. Text color issue after Rematch clicked, repaired.

--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,6 @@ h1 {
     color: red;
 }
 
-h2 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: 0px;
-}
-
 h3, h4 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
@@ -23,15 +18,29 @@ h3, h4 {
 #rules {
     font-family: cursive;
     width: 30%;
+    height: 665px;
     text-align: center;
     color: black;
-    background-color: lightgray;
-    margin-bottom: 5px;
+    background-color: transparent;
+    margin-top: 0px;
+}
+
+#rulebtn {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size:larger;
+    font-weight: bolder;
+    width: 100%;
+    height: 100px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    border-radius: 15px;
 }
 
 #rulespar {
     margin-top: 0px;
-    padding: 5px;
+    border-radius: 5px;
+    height: 525px;
+    padding-top: 5px;
 }
 
 #score {
@@ -56,6 +65,7 @@ h3, h4 {
     font-size: 60px;
     background-color: lightgray;
     text-align: center;
+    color: black;
 }
 
 #matchscore {
@@ -64,6 +74,7 @@ h3, h4 {
     font-size: 60px;
     background-color: lightgray;
     text-align: center;
+    color: black;
 }
 
 #game {
